[tool.poetry]
name = "app"
version = "1.0.0"
description = "farmOS Aggregator Backend"
authors = ["Paul Weidner <paul.weidner@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70"
pyjwt = "^1.7.1"
python-multipart = "^0.0.5"
email-validator = "^1.0.5"
requests = "^2.23.0"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
tenacity = "^6.1.0"
pydantic = "^1.8"
emails = "^0.6"
raven = "^6.10.0"
gunicorn = "^20.0.4"
jinja2 = "^3"
psycopg2-binary = "^2.8.5"
alembic = "^1.4.2"
sqlalchemy = "^1.3.16"
farmOS = "^1.0.0-beta.3"
uvicorn = "^0.17.4"

[tool.poetry.group.dev.dependencies]
mypy = "^0.770"
black = "^22"
isort = "^5.10"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "^7"
vulture = "^1.4"
safety = "^1.10.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"